# Rool

./: Makefile  README.md
config/: .modules  .proj  cpp-rool.json
config/models/: Makefile.model  inc.model  inc_parents.model  inherit_parents.model  interface.model  main.model  src.model
config/proj_tree/: classic.tree
config/templates/: MakeLib.template  include.template  interface.template  parent_include_self.template  parent_include_trueName.template  project.template  src.template
ds/: Makefile
include/: Boot.hpp  ClassList.hpp  ClassMod.hpp  ClassTemplate.hpp  GUI.hpp  ICommand.hpp  IModule.hpp  InterfaceCmd.hpp  MemberList.hpp  MemberTemplate.hpp  Menu.hpp  ModuleFactory.hpp  Project.hpp  ReplaceClassName.hpp  SortItems.hpp  StandardCmd.hpp  TemplateBehavior.hpp  UsualClass.hpp  UsualInterface.hpp  Window.hpp  util.hpp
lib/fileManip/: Makefile
lib/fileManip/include/: fileManip.hpp
lib/fileManip/src/: fileManip.cpp
lib/parseStr/: Makefile
lib/parseStr/include/: parseStr.hpp
src/: Boot.cpp  ClassTemplate.cpp  GUI.cpp  MemberTemplate.cpp  ModuleFactory.cpp  Project.cpp  SortItems.cpp  main.cpp
src/commands/: InterfaceCmd.cpp  StandardCmd.cpp
src/makeTemplates/: ReplaceClassName.cpp  UsualClass.cpp  UsualInterface.cpp
src/menuLists/: MemberList.cpp
src/menus/: Boot.cpp  ClassList.cpp
src/models/: Menu.cpp
src/mods/: ClassMod.cpp
src/ncurse/: Menu.cpp  Window.cpp
src/screens/: Boot.cpp  Project.cpp
src/structParents/: Menu.cpp  Window.cpp
src/utils/: FtFile.cpp  FtStr.cpp
test/MyProject/: Makefile
util/: CMakeLists.txt
(+3 files in other folders)
